--- a/schedule/index.html
+++ b/schedule/index.html
@@ -8,7 +8,7 @@
         <style>
             body {
 			 font-family: 'IBM Plex Sans', sans-serif;
-			 /* font-family: 'IBM Plex Serif', serif; */
+			 font-family: 'IBM Plex Serif', serif;
              }
              a {
   color: blue;
