--- a/schedule/index.html
+++ b/schedule/index.html
@@ -31,7 +31,7 @@ a:hover {
             <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Links to recordings and resources</span></th>
 		</tr>
 		<tr>
-			<td><strong>&nbsp; &nbsp; &nbsp;</strong> &middot; 22/01/2024</td>
+			<td><strong>00</strong> &middot; 22/01/2024</td>
 			<td style="background-color:#00c1d4; text-align: center;"><span style="color:#000000;">Enrichment week</span></td>
 			<td style="background-color:#00c1d4; text-align: center;"><span style="color:#000000;"></span></td>
 		</tr>
