--- a/card.html
+++ b/card.html
@@ -18,5 +18,5 @@
   <!-- <a href="#"><i class="fa fa-linkedin"></i></a> -->
   <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
   <p><a href="https://teams.microsoft.com/l/chat/0/0?users=k.m.obrien@mmu.ac.uk" target="_blank"><button>Teams chat</button></a></p>
-  <p><a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me</button></a></p>
+  <p><a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me at <code>k.m.obrien@mmu.ac.uk</code></button></a></p>
 </div>
