--- a/card.html
+++ b/card.html
@@ -1,6 +1,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -10,6 +10,7 @@
   <img src="me-red.jpg" alt="Killian" style="width:100%">
   <h1>Dr Killian O'Brien</h1>
   <p class="title">Senior Lecturer, Mathematics</p>
+  <p>JD E114a, John Dalton Building East</p>
   <p>Manchester Metropolitan University</p>
   <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
   <a href="https://www.mmu.ac.uk/computing-and-maths/staff/profile/dr-killian-obrien" target="_blank"><i class="fa fa-globe"></i></a>
