--- a/card.html
+++ b/card.html
@@ -8,10 +8,9 @@
 
 <div class="card">
   <img src="me-red.jpg" alt="Killian" style="width:100%">
-  <h1>Dr Killian O'Brien</h1>
-  <p class="title">Senior Lecturer, Mathematics</p>
-  <p>JD E114a, John Dalton Building East</p>
-  <p>Manchester Metropolitan University</p>
+  <h2>Dr Killian O'Brien<br>Senior Lecturer</h2>
+  <p>JD E114a, John Dalton Building East,<br>
+  Manchester Metropolitan University</p>
   <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
   <a href="https://www.mmu.ac.uk/computing-and-maths/staff/profile/dr-killian-obrien" target="_blank"><i class="fa fa-globe"></i></a>
   <a href="https://twitter.com/killianobrien" target="_blank"><i class="fa fa-twitter"></i></a>
