--- a/card.html
+++ b/card.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+
+<head>
 <!-- Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -7,6 +11,9 @@
 <!-- Card css -->
 <link rel="stylesheet" href="card.css">
 
+</head>
+
+<body>
 <div class="card">
   <img src="me-red.jpg" alt="Killian" style="width:100%">
   <h2>Dr Killian O'Brien<br>Senior Lecturer</h2>
@@ -21,3 +28,8 @@
   <p><a href="https://teams.microsoft.com/l/chat/0/0?users=k.m.obrien@mmu.ac.uk" target="_blank"><button>Message me on Teams</button></a></p>
   <p><a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me at <code>k.m.obrien@mmu.ac.uk</code></button></a></p>
 </div>
+</body>
+
+
+
+</html>
