--- a/card.html
+++ b/card.html
@@ -20,11 +20,13 @@
   <p>JD E114a, John Dalton Building East,<br>
   Manchester Metropolitan University</p>
   <!-- <a href="#"><i class="fa fa-dribbble"></i></a> -->
-  <a href="https://www.mmu.ac.uk/computing-and-maths/staff/profile/dr-killian-obrien" target="_blank"><i class="fa fa-globe"></i></a>
-  <a href="https://twitter.com/killianobrien" target="_blank"><i class="fa fa-twitter"></i></a>
-  <a href="https://www.youtube.com/@KillianOBrien" target="_blank"><i class="fa fa-youtube"></i></a>
+  <div>
+  <a style="margin:0px 5px;" href="https://www.mmu.ac.uk/computing-and-maths/staff/profile/dr-killian-obrien" target="_blank"><i class="fa fa-globe"></i></a>
+  <a style="margin:0px 5px;" href="https://twitter.com/killianobrien" target="_blank"><i class="fa fa-twitter"></i></a>
+  <a style="margin:0px 5px;" href="https://www.youtube.com/@KillianOBrien" target="_blank"><i class="fa fa-youtube"></i></a>
   <!-- <a href="#"><i class="fa fa-linkedin"></i></a> -->
   <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+  </div>
   <p><a href="https://teams.microsoft.com/l/chat/0/0?users=k.m.obrien@mmu.ac.uk" target="_blank"><button>Message me on Teams</button></a></p>
   <p><a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me at <code>k.m.obrien@mmu.ac.uk</code></button></a></p>
 </div>
