--- a/card.html
+++ b/card.html
@@ -15,7 +15,7 @@
 
 <body>
 <div class="card">
-  <img src="me-red.jpg" alt="Killian" style="width:100%">
+  <img src="me-red.jpg" alt="Killian" style="width:250px">
   <h2>Dr Killian O'Brien<br>Senior Lecturer</h2>
   <p>JD E114a, John Dalton Building East,<br>
   Manchester Metropolitan University</p>
@@ -27,8 +27,8 @@
   <!-- <a href="#"><i class="fa fa-linkedin"></i></a> -->
   <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
   </div>
-  <p><a href="https://teams.microsoft.com/l/chat/0/0?users=k.m.obrien@mmu.ac.uk" target="_blank"><button>Message me on Teams</button></a></p>
-  <p><a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me at <code>k.m.obrien@mmu.ac.uk</code></button></a></p>
+  <p><a href="https://teams.microsoft.com/l/chat/0/0?users=k.m.obrien@mmu.ac.uk" target="_blank"><button>Message me on Teams</button></a>
+  <a href="mailto:k.m.obrien@mmu.ac.uk"><button>Email me at <code>k.m.obrien@mmu.ac.uk</code></button></a></p>
 </div>
 </body>
 
