--- a/schedule/index.html
+++ b/schedule/index.html
@@ -49,7 +49,13 @@ a:hover {
 		<tr>
 			<td><strong>02</strong> &middot; 05/02/2024</td>
 			<td><ul><li>Limiting values of functions</li></ul></td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						<a href="../reals.html" target="_blank">Axioms for the reals</a>
+					</li>
+				</ul>
+			</td>
 		</tr>		<tr>
 			<td><strong>03</strong> &middot; 12/02/2024</td>
 			<td>
