--- a/reals.html
+++ b/reals.html
@@ -153,8 +153,8 @@
       <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
       <style>
           body {
-           font-family: 'IBM Plex Sans', sans-serif;
-           /* font-family: 'IBM Plex Serif', serif; */
+           /* font-family: 'IBM Plex Sans', sans-serif; */
+           font-family: 'IBM Plex Serif', serif;
            }
            a {
     color: blue;
