back to georgia

--- a/reals.html
+++ b/reals.html
@@ -154,7 +154,7 @@
       <style>
           body {
            /* font-family: 'IBM Plex Sans', sans-serif; */
-           font-family: 'IBM Plex Serif', serif;
+           /* font-family: 'IBM Plex Serif', serif; */
            }
            a {
     color: blue;
