--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <style>
         body {
          /* font-family: 'IBM Plex Sans', sans-serif; */
-         font-family: 'IBM Plex Serif', serif;
+         /* font-family: 'IBM Plex Serif', serif; */
          }
          a {
   color: blue;
