--- a/schedule/index.html
+++ b/schedule/index.html
@@ -50,7 +50,7 @@ a:hover {
 						<a href="../reals.html" target="_blank">Axioms for the reals</a>
 					</li>
 					<li>
-						<a href="https://www.geogebra.org/m/nnb5auut" target="_blank">Nice GeoGebra widget</a> illustrating the $\epsilon, \delta$ definition of limiting value.
+						<a href="https://www.geogebra.org/m/nnb5auut" target="_blank">Nice GeoGebra widget</a> illustrating the \(\epsilon, \delta\) definition of limiting value.
 					</li>
 				</ul>
 			</td>
