--- a/schedule/index.html
+++ b/schedule/index.html
@@ -63,6 +63,10 @@ a:hover {
 					<li>
 						<a href="https://www.geogebra.org/m/nnb5auut" target="_blank">Nice GeoGebra widget</a> illustrating the \(\epsilon, \delta\) definition of limiting value.
 					</li>
+					<li>
+						Lecture <a href="https://youtu.be/YfKxZfYZyZY" target="_blank">capture recording</a>,
+						lecture <a href="../pdf/calc01_annotated.pdf" target="_blank">boards</a>.
+					</li>
 				</ul>
 			</td>
 		</tr>
