--- a/schedule/index.html
+++ b/schedule/index.html
@@ -55,7 +55,7 @@ a:hover {
 			<td>
 				<ul>
 					<li>
-						APEX sections <a href="https://killianobrien.github.io/apex/output/html/sec_limit_intro.html" target="_blank">1.1</a> and <a href="https://killianobrien.github.io/apex/output/html/sec_limit_def.html" target="_blank">1.2</a>.
+						Reading: APEX sections <a href="https://killianobrien.github.io/apex/output/html/sec_limit_intro.html" target="_blank">1.1</a> and <a href="https://killianobrien.github.io/apex/output/html/sec_limit_def.html" target="_blank">1.2</a>.
 					</li>
 					<li>
 						<a href="../reals.html" target="_blank">Axioms for the reals</a>
