--- a/schedule/index.html
+++ b/schedule/index.html
@@ -71,6 +71,10 @@ a:hover {
 						Tutorial 1pm <a href="https://youtu.be/aCocKIIzzLc" target="_blank">capture recording</a>,
 						tutorial <a href="../pdf/calctut01a_marked.pdf" target="_blank">boards</a>
 					</li>
+					<li>
+						Tutorial 3pm <a href="https://youtu.be/NdwYRMRH50w" target="_blank">capture recording</a>,
+						tutorial <a href="../pdf/calctut01b_marked.pdf" target="_blank">boards</a>
+					</li>
 				</ul>
 			</td>
 		</tr>
