--- a/schedule/index.html
+++ b/schedule/index.html
@@ -75,6 +75,9 @@ a:hover {
 						Tutorial 3pm <a href="https://youtu.be/NdwYRMRH50w" target="_blank">capture recording</a>,
 						tutorial <a href="../pdf/calctut01b_marked.pdf" target="_blank">boards</a>
 					</li>
+					<li>
+						The <a href="../meangirls.html" target="_blank">Math Competition scene</a> at the end of the film *Mean Girls*.
+					</li>
 				</ul>
 			</td>
 		</tr>
