--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,7 +76,7 @@ a:hover {
 						tutorial <a href="../pdf/calctut01b_marked.pdf" target="_blank">boards</a>
 					</li>
 					<li>
-						The <a href="../meangirls.html" target="_blank">Math Competition scene</a> at the end of the film *Mean Girls*.
+						The <a href="../meangirls.html" target="_blank">Math Competition scene</a> at the end of the film <em>Mean Girls</em>.
 					</li>
 				</ul>
 			</td>
