--- a/schedule/index.html
+++ b/schedule/index.html
@@ -83,8 +83,18 @@ a:hover {
 		</tr>
 		<tr>
 			<td><strong>02</strong> &middot; 05/02/2024</td>
-			<td><ul><li>Limiting values of functions</li></ul></td>
+			<td><ul>
+				<li>Proving properties of limits.</li>
+				<li>Further limits</li>
+				<li>Continuity</li>
+			</ul></td>
 			<td>
+				<li>
+					Reading: Apex Calculus sections <a href="https://killianobrien.github.io/apex/output/html/sec_limit_analytically.html" target="_blank">1.3</a>, 
+					<a href="https://killianobrien.github.io/apex/output/html/sec_limits_one_sided.html" target="_blank">1.4</a>,
+					<a href="https://killianobrien.github.io/apex/output/html/sec_continuity.html" target="_blank">1.5</a>,
+					<a href="https://killianobrien.github.io/apex/output/html/sec_limits_infty.html" target="_blank">1.6</a>.
+				</li>
 			</td>
 		</tr>		<tr>
 			<td><strong>03</strong> &middot; 12/02/2024</td>
