--- a/schedule/index.html
+++ b/schedule/index.html
@@ -96,6 +96,8 @@ a:hover {
 					<a href="https://killianobrien.github.io/apex/output/html/sec_continuity.html" target="_blank">1.5</a>,
 					<a href="https://killianobrien.github.io/apex/output/html/sec_limits_infty.html" target="_blank">1.6</a>.
 				</li>
+				<li>
+					Lecture <a href="https://youtu.be/o5X6yqnZuwQ" target="_blank">capture recording</a>, lecture <a href="../pdf/calc2_annotated.pdf" target="_blank">boards</a>.
 				</ul>
 			</td>
 		</tr>		<tr>
