--- a/schedule/index.html
+++ b/schedule/index.html
@@ -98,6 +98,10 @@ a:hover {
 				</li>
 				<li>
 					Lecture <a href="https://youtu.be/o5X6yqnZuwQ" target="_blank">capture recording</a>, lecture <a href="../pdf/calc2_annotated.pdf" target="_blank">boards</a>.
+				</li>
+				<!-- <li>
+					Friday 1pm tutorial <a href="https://youtu.be/_dLV4-5oqco" target="_blank">capture recording</a>, tutorial <a href="../pdf/calctut02a_annotated.pdf" target="_blank">boards</a>.
+				</li> -->
 				</ul>
 			</td>
 		</tr>		<tr>
