--- a/schedule/index.html
+++ b/schedule/index.html
@@ -102,6 +102,9 @@ a:hover {
 				<!-- <li>
 					Friday 1pm tutorial <a href="https://youtu.be/_dLV4-5oqco" target="_blank">capture recording</a>, tutorial <a href="../pdf/calctut02a_annotated.pdf" target="_blank">boards</a>.
 				</li> -->
+				<li>
+					Friday 3pm tutorial <a href="https://youtu.be/D4sVeFz9gPw" target="_blank">capture recording</a>, tutorial <a href="../pdf/calc02tutb_marked.pdf" target="_blank">boards</a>.
+				</li>
 				</ul>
 			</td>
 		</tr>		<tr>
