--- a/schedule/index.html
+++ b/schedule/index.html
@@ -112,9 +112,26 @@ a:hover {
 			<td>
 				<ul>
 					<li>Derivatives</li>
+					<ul>
+						<li>Derivative motivation and definition</li>
+						<li>Initial examples</li>
+						<li>Basic properties of the derivative: constant and power rules; linearity; product rule.</li>
+					</ul>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						Reading: Apex Calculus sections <a href="https://killianobrien.github.io/apex/output/html/sec_derivative.html" target="_blank">2.1</a>, 
+						<a href="https://killianobrien.github.io/apex/output/html/sec_interp_deriv.html" target="_blank">2.2</a>,
+						<a href="https://killianobrien.github.io/apex/output/html/sec_basic_diff_rules.html" target="_blank">2.3</a>,
+						<a href="https://killianobrien.github.io/apex/output/html/sec_prod_quot_rules.html" target="_blank">2.4</a>.
+					</li>
+					<li>
+						Lecture <a href="https://youtu.be/ZF5w5yIWxvU" target="_blank">capture recroding</a>, and the <a href="../pdf/calc03_annotated.pdf" target="_blank">lecture boards</a>.
+					</li>
+				</ul>
+			</td>
 		</tr>		<tr>
 			<td><strong>04</strong> &middot; 19/02/2024</td>
 			<td>
