--- a/schedule/index.html
+++ b/schedule/index.html
@@ -130,6 +130,10 @@ a:hover {
 					<li>
 						Lecture <a href="https://youtu.be/ZF5w5yIWxvU" target="_blank">capture recroding</a>, and the <a href="../pdf/calc03_annotated.pdf" target="_blank">lecture boards</a>.
 					</li>
+					<li>
+						Wednesday 1pm tutorial <a href="https://youtu.be/IlMm_DaPucI" target="_blank">capture recording</a>, and <a href="../pdf/calc03tuta_annotated.pdf" target="_blank">tutorial boards.</a>
+						<em>A short recording as most time was spent with students working away on questions.</em>
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
