--- a/schedule/index.html
+++ b/schedule/index.html
@@ -132,7 +132,10 @@ a:hover {
 					</li>
 					<li>
 						Wednesday 1pm tutorial <a href="https://youtu.be/IlMm_DaPucI" target="_blank">capture recording</a>, and <a href="../pdf/calc03tuta_annotated.pdf" target="_blank">tutorial boards.</a>
-						<em>A short recording as most time was spent with students working away on questions.</em>
+					</li>
+					<li>
+						Wednesday 3pm tutorial <a href="https://youtu.be/akQ_at7wfLY" target="_blank">capture recording</a> and <a href="../pdf/calctut03b_annotated.pdf" target="_blank">tutorial boards</a>.<br>
+						<em>These tutorial recordings are short as most time was spent with students working on their own questions.</em>
 					</li>
 				</ul>
 			</td>
