--- a/schedule/index.html
+++ b/schedule/index.html
@@ -146,7 +146,16 @@ a:hover {
 					<li>Derivatives</li>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						Reading: Complete your reading of Aprex Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_derivatives.html" target="_blank">Chapter 2: Derivatives</a>.
+					</li>
+					<li>
+						Lecture <a href="https://youtu.be/uagNSUw82kU" target="_blank">capture recording</a>, and the <a href="../pdf/calc04_annotated.pdf" target="_blank">lecture boards</a>.
+					</li>
+				</ul>
+			</td>
 		</tr>		<tr>
 			<td><strong>05</strong> &middot; 26/02/2024</td>
 			<td>
