--- a/schedule/index.html
+++ b/schedule/index.html
@@ -144,6 +144,11 @@ a:hover {
 			<td>
 				<ul>
 					<li>Derivatives</li>
+					<ul>
+						<li>The <em>linear approximation with error</em> view of the derivative</li>
+						<li>proof of the chain rule</li>
+						<li>proof of the quotient rule</li>
+					</ul>
 				</ul>
 			</td>
 			<td>
