--- a/schedule/index.html
+++ b/schedule/index.html
@@ -131,10 +131,10 @@ a:hover {
 						Lecture <a href="https://youtu.be/ZF5w5yIWxvU" target="_blank">capture recroding</a>, and the <a href="../pdf/calc03_annotated.pdf" target="_blank">lecture boards</a>.
 					</li>
 					<li>
-						Wednesday 1pm tutorial <a href="https://youtu.be/IlMm_DaPucI" target="_blank">capture recording</a>, and <a href="../pdf/calc03tuta_annotated.pdf" target="_blank">tutorial boards.</a>
+						Friday 1pm tutorial <a href="https://youtu.be/IlMm_DaPucI" target="_blank">capture recording</a>, and <a href="../pdf/calc03tuta_annotated.pdf" target="_blank">tutorial boards.</a>
 					</li>
 					<li>
-						Wednesday 3pm tutorial <a href="https://youtu.be/akQ_at7wfLY" target="_blank">capture recording</a> and <a href="../pdf/calctut03b_annotated.pdf" target="_blank">tutorial boards</a>.<br>
+						Friday 3pm tutorial <a href="https://youtu.be/akQ_at7wfLY" target="_blank">capture recording</a> and <a href="../pdf/calctut03b_annotated.pdf" target="_blank">tutorial boards</a>.<br>
 						<em>These tutorial recordings are short as most time was spent with students working on their own questions.</em>
 					</li>
 				</ul>
@@ -154,10 +154,13 @@ a:hover {
 			<td>
 				<ul>
 					<li>
-						Reading: Complete your reading of Aprex Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_derivatives.html" target="_blank">Chapter 2: Derivatives</a>.
+						Reading: Complete your reading of Apex Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_derivatives.html" target="_blank">Chapter 2: Derivatives</a>.
 					</li>
 					<li>
 						Lecture <a href="https://youtu.be/uagNSUw82kU" target="_blank">capture recording</a>, and the <a href="../pdf/calc04_annotated.pdf" target="_blank">lecture boards</a>.
+					</li>
+					<li>
+						Friday 1pm tutorial <a href="https://youtu.be/2_eotqH0HkI" target="_blank">capture recording</a>, and tutorial <a href="../pdf/calctut04a_annotated.pdf" target="_blank">boards</a>.
 					</li>
 				</ul>
 			</td>
