--- a/schedule/index.html
+++ b/schedule/index.html
@@ -162,6 +162,9 @@ a:hover {
 					<li>
 						Friday 1pm tutorial <a href="https://youtu.be/2_eotqH0HkI" target="_blank">capture recording</a>, and tutorial <a href="../pdf/calctut04a_annotated.pdf" target="_blank">boards</a>.
 					</li>
+					<li>
+						Friday 3pm tutorial <a href="https://youtu.be/tLm1A5vVd0M" target="_blank">capture recording</a>, and tutorial <a href="../pdf/calc04tutb_annotated.pdf" target="_blank">boards</a>.
+					</li>
 				</ul>
 			</td>
 		</tr>		<tr>
