--- a/schedule/index.html
+++ b/schedule/index.html
@@ -172,9 +172,23 @@ a:hover {
 			<td>
 				<ul>
 					<li>Derivatives</li>
+					<ul>
+						<li>
+							<em>Optimization problems</em>
+						</li>
+					</ul>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<ul>
+					<li>
+						Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/sec_optimization.html" target="_blank">Section 4.3 Optimization</a>
+					</li>
+					<li>
+						Lecture <a href="https://youtu.be/KFjJ1baiM3A" target="_blank">capture recording</a>, and <a href="../pdf/calc05_annotated.pdf" target="_blank">lecture boards</a>.
+					</li>
+				</ul>
+			</td>
 		</tr>		<tr>
 			<td><strong>06</strong> &middot; 04/03/2024</td>
 			<td>
