--- a/schedule/index.html
+++ b/schedule/index.html
@@ -188,7 +188,7 @@ a:hover {
 						Lecture <a href="https://youtu.be/KFjJ1baiM3A" target="_blank">capture recording</a>, and <a href="../pdf/calc05_annotated.pdf" target="_blank">lecture boards</a>.
 					</li>
 					<li>
-						Tutorial <a href="https://youtu.be/dgME9Id__Ao" target="_blank">capture recording</a>, and <a href="../pdf/calc05tuta_annotated.pdf" target="_blank">tutorial boards</a>. <em>Audio is absent form the video unfortunately.</em>
+						Tutorial <a href="https://youtu.be/dgME9Id__Ao" target="_blank">capture recording</a>, and <a href="../pdf/calc05tuta_annotated.pdf" target="_blank">tutorial boards</a>. <em>Audio is absent form the video, unfortunately.</em>
 					</li>
 				</ul>
 			</td>
