--- a/schedule/index.html
+++ b/schedule/index.html
@@ -197,9 +197,24 @@ a:hover {
 			<td>
 				<ul>
 					<li>Integration</li>
+					<ul>
+						<li>
+							Indefinite integration, <em>the integral as anti-differentiation</em>
+						</li>
+						<li>
+							Definite integration, <em>the integral as summed signed areas between the curve and the horizontal axis</em>
+						</li>
+					</ul>
 				</ul>
 			</td>
-			<td></td>
+			<td>
+				<li>
+					Reading: APEX Calculus <a href="https://killianobrien.github.io/apex/output/html/chapter_integration.html" target="_blank">Sections 5.1 - 5.3 on Integration</a>
+				</li>
+				<li>
+					Lecture <a href="https://www.youtube.com/watch?v=dkqwPyltFmQ" target="_blank">capture recording</a>, and the <a href="../pdf/calc06_annotated.pdf" target="_blank">lecture boards</a>, <em>unfortunately my recording failed today, so I've linked to an equivalent lecture from last year</em>
+				</li>
+			</td>
 		</tr>		<tr>
 			<td><strong>07</strong> &middot; 11/03/2024</td>
 			<td>
