--- a/schedule/index.html
+++ b/schedule/index.html
@@ -217,6 +217,9 @@ a:hover {
 				<li>
 					1pm tutorial <a href="https://youtu.be/v2hmOCMW1d0" target="_blank">capture recording</a>, and the <a href="../pdf/calc06tuta_annotated.pdf" target="_blank">tutorial boards</a>.
 				</li>
+				<li>
+					3pm tutorial <a href="https://youtu.be/mc2YBlwSdmQ" target="_blank">tutorial capture</a>, and the <a href="../pdf/calc06tutb_annotated.pdf" target="_blank">tutorial pages</a>.
+				</li>
 			
 			</ul>
 			</td>
